sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: type mismatch;
 found   : Int
 required: Boolean
    if (plusPetit(i+1, i) && i ~= 0) {
                             ^AlgGnomeSort:8: error: type mismatch;
 found   : Int
 required: Boolean
    if (plusPetit(i+1, i) && i ~= 0) {
                             ^