sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  
  var i:Int = 0
  
  while (i < getNombreValeurs()-1) {
  
    if (plusPetit(i+1, i) && i ~= 0) {
      
      echange(i+1, i)
      i = i - 1
    
    }
      
    else {
      
      if (i == 0) {i = i + 1}
      else {i = i + 1}
      
    }
      
    }
    
}
  

